Wed Jul 26 17:28:16 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_f_sprintf): prepend ".." to %u for negative bignum,
	  but not "-".  fixed: [ruby-core:08167]

Wed Jul 26 16:39:07 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_scan): add string modification check.
	  [ruby-core:7216]

Wed Jul 26 16:06:03 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/cgi.rb (CGI::QueryExtension::read_multipart): check
	  multipart boundary end.  a patch from Fujioka <fuj at rabbix.jp>
	  [ruby-dev:28470]

Wed Jul 26 01:02:59 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: suppress warnings by automake 1.8 or later.

Tue Jul 25 00:30:06 2006  Eric Hodel  <drbrain@segment7.net>

	* lib/prettyprint.rb: RD to RDoc conversion by Hugh Sasse.

Tue Jul 25 14:49:51 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb (configuration): typo.

Tue Jul 25 13:14:32 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* process.c (rb_proc_times): rename hz to hertz to avoid name
	  crash on AIX.  [ruby-dev:29126]

Mon Jul 24 22:03:40 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (backtrace): skip frames successive on node and method name.

Mon Jul 24 17:55:55 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* process.c (rb_f_system): add security check.  [ruby-talk:202947]

	* process.c (rb_f_system): move signal right before fork to avoid
	  signal handler intervention.

Mon Jul 24 15:51:52 2006  Tanaka Akira  <akr@fsij.org>

	* ext/readline/readline.c (readline_readline): rl_deprep_term_function
	  may be NULL with libedit.  reported by Ryan Davis.  [ruby-dev:29070]

Mon Jul 24 15:19:55 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_call0): revert last change.  [ruby-dev:29112]
	  [ruby-core:08374]

Sun Jul 23 22:59:49 2006  Tanaka Akira  <akr@fsij.org>

	* test/socket/test_unix.rb: disabled on cygwin.
	  reported by Kouhei Yanagita.  [ruby-dev:29080]
