@@ -1,3 +1,8 @@
+Wed Jul 26 18:14:19 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/pty/pty.c (getDevice): retry once after GC on failure.
+	  [ruby-core:08282]
+
 Wed Jul 26 17:28:16 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* sprintf.c (rb_f_sprintf): prepend ".." to %u for negative bignum,
